# ironclaw

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE-local.md  CLAUDE.md  Cargo.toml  Dockerfile.reborn  FEATURE_PARITY.md  README.md  attested-signing-effort-summary.md  compaction-invariant-note.md  deny.toml  hooks-stack-status.md  providers.json
.github/workflows/: claude-review.yml  code_style.yml  coverage.yml  e2e.yml  experimental-compile-bench.yml  experimental-full-suite.yml  experimental-sccache-ab.yml  live-canary.yml  nearai-bench.yml  reborn-closure-discovery.yml  reborn-e2e.yml  reborn-integration.yml  reborn-tests.yml  release.yml  test.yml
channels-src/feishu/: feishu.capabilities.json
crates/: AGENTS.md  README.md
crates/ironclaw_agent_loop/: Cargo.toml
crates/ironclaw_auth_storage/: Cargo.toml
crates/ironclaw_auth_storage/src/: lib.rs
crates/ironclaw_auth_storage/src/tests/: flows.rs  mod.rs
crates/ironclaw_blueprint/: Cargo.toml
crates/ironclaw_blueprint/src/: error.rs  lib.rs  lockfile.rs  parser.rs  schema.rs  secret_scan.rs
crates/ironclaw_blueprint/tests/: parse.rs
crates/ironclaw_event_projections/: Cargo.toml
crates/ironclaw_extensions/: CLAUDE.md  Cargo.toml
crates/ironclaw_filesystem/: Cargo.toml
crates/ironclaw_hooks/: CLAUDE.md  Cargo.toml
crates/ironclaw_host_runtime/: Cargo.toml
crates/ironclaw_llm/: CLAUDE.md  Cargo.toml
crates/ironclaw_llm/src/: anthropic_oauth.rs  bedrock.rs  codex_chatgpt.rs  config.rs  failover.rs  gemini_oauth.rs  github_copilot.rs  lib.rs  mistral.rs  mistral_tests.rs  nearai_chat.rs  normalizing.rs  openai_codex_provider.rs  provider.rs  reasoning.rs  reasoning_models.rs  registry.rs  resolution.rs  response_cache.rs  rig_adapter.rs  smart_routing.rs  vision_models.rs
crates/ironclaw_llm/src/mistral/: tests.rs
crates/ironclaw_llm/src/testing/: mod.rs
crates/ironclaw_llm/tests/: normalizing_integration.rs
crates/ironclaw_loop_support/: Cargo.toml
crates/ironclaw_memory/: Cargo.toml
crates/ironclaw_oauth/: AGENTS.md  Cargo.toml
crates/ironclaw_oauth/src/: callback.rs  error.rs  flow.rs  lib.rs  provider.rs  refresh.rs  resume.rs  state.rs  storage.rs
crates/ironclaw_oauth/tests/: oauth_flow.rs
crates/ironclaw_reborn/: Cargo.toml
crates/ironclaw_reborn/src/: lib.rs  loop_driver_host.rs  loop_exit_applier.rs  milestone_events.rs  model_gateway.rs  planned_driver.rs  runtime.rs  text_loop_driver.rs  thread_scope.rs  tool_disclosure.rs  tool_disclosure_port.rs  turn_runner.rs
crates/ironclaw_reborn/src/loop_exit_applier/tests/: mod.rs  support.rs
crates/ironclaw_reborn/src/subagent/: completion_observer.rs  flavors.rs
crates/ironclaw_reborn/src/turn_runner/tests/: mod.rs
crates/ironclaw_reborn/tests/: hooks_integration.rs  llm_gateway.rs  loop_driver_host.rs  loop_milestone_event_projection.rs
crates/ironclaw_reborn_cli/: AGENTS.md  Cargo.toml
crates/ironclaw_reborn_composition/: CLAUDE.md  Cargo.toml
crates/ironclaw_reborn_http_kit/: Cargo.toml
crates/ironclaw_reborn_openai_compat/: AGENTS.md  CLAUDE.md  Cargo.toml
crates/ironclaw_reborn_openai_compat_storage/: Cargo.toml
crates/ironclaw_reborn_telegram_v2_host/: Cargo.toml
crates/ironclaw_reborn_webui_ingress/: Cargo.toml
crates/ironclaw_secrets/: Cargo.toml
crates/ironclaw_telegram_v2_adapter/: Cargo.toml
crates/ironclaw_telegram_v2_adapter/src/: adapter.rs
crates/ironclaw_telegram_v2_adapter/tests/: product_adapter_telegram_contract.rs
crates/ironclaw_webui_v2/: CLAUDE.md  Cargo.toml
docker/reborn/: config.hosted-single-tenant.toml  config.production.toml  config.toml
docs/: mistral-reasoning.md  reborn-binary.md  security.mdx
docs/architecture-video/: package-lock.json  package.json
docs/capabilities/: llm-providers.md  sandboxed-tools.mdx
docs/channels/: telegram.mdx
docs/plans/: 2026-05-23-attested-signing-substrate.md  2026-06-09-project-ownership-roadmap.md  2026-06-12-reborn-persistent-sandbox.md  2026-06-14-reborn-learning-system.md  2026-06-15-provider-tool-input-scope-mismatch.md  2026-06-23-hermes-style-context-management.md  2026-06-24-mistral-reasoning-impl.md  2026-06-24-mistral-reasoning-provider-architecture.md  2026-06-25-mistral-reasoning-code-quality-review.md  2026-06-25-mistral-reasoning-review-findings.md
docs/providers/: mistral-reasoning.md
docs/reborn/: README.md  agent-loop-skeleton.md  deploy-reborn-cli-docker.md  how-to-port-channel-to-reborn.md
migrations/: V32__conversation_messages_reasoning.sql  V33__conversation_messages_reasoning_signature.sql
registry/channels/: slack.json  telegram.json  wechat.json
scripts/: test-mistral-reasoning-ironclaw.sh  test-mistral-reasoning.sh
scripts/ci/: reborn-package-matrix.sh  run-legacy-root-test-partition.sh
src/: app.rs  generated_images.rs  image_artifacts.rs  main.rs
src/agent/: agent_loop.rs  agentic_loop.rs  commands.rs  dispatcher.rs  scheduler.rs  session.rs  thread_ops.rs
src/bridge/: action_projector.rs  effect_adapter.rs  llm_adapter.rs  mod.rs  router.rs
src/cli/: models.rs
src/config/: llm.rs  mod.rs
src/db/: libsql_migrations.rs  mod.rs  postgres.rs
src/extensions/: manager.rs
src/history/: store.rs
src/hooks/: session_summary.rs
src/llm/: config.rs  models.rs
src/orchestrator/: api.rs
src/setup/: README.md  wizard.rs
src/skills/: attenuation.rs
src/tools/: dispatch.rs  execute.rs  registry.rs
src/worker/: api.rs  container.rs  job.rs
tests/: admin_tool_policy_e2e.rs  dockerfile_runtime_home.rs  e2e_live_mistral_reasoning.rs  engine_v2_gate_integration.rs  engine_v2_sandbox_integration.rs  openai_compat_integration.rs  provider_chaos.rs  reborn_adapter_installation_scope_isolation_parity.rs  reborn_direct_chat_user_scope_isolation_parity.rs  reborn_identity_tenant_scope_isolation_parity.rs  reborn_tenant_binding_scope_isolation_parity.rs  reborn_thread_binding_isolation_parity.rs  reborn_trace_first_party_tool_coverage.rs  reborn_wrong_scope_access_isolation_parity.rs  responses_api_cross_tenant.rs  support_unit_tests.rs
tests/e2e/: CLAUDE.md  (+3 more)
wix/: main.wxs
(+626 files in other folders)
