[package]
name = "ironclaw_llm"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
description = "LLM provider contracts for IronClaw"
authors = ["NEAR AI <support@near.ai>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/nearai/ironclaw"
repository = "https://github.com/nearai/ironclaw"
publish = false

[dependencies]
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls-native-roots", "stream"] }
rust_decimal = { version = "1", features = ["serde", "serde-with-str", "maths"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"

[dev-dependencies]
insta = { version = "1.46.3", features = ["yaml"] }
