[package]
name = "ironclaw_oauth"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
description = "Provider-agnostic OAuth substrate for IronClaw Reborn"
authors = ["NEAR AI <support@near.ai>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/nearai/ironclaw"
repository = "https://github.com/nearai/ironclaw"
publish = false

[features]
default = []
test-fixtures = []

[dependencies]
async-trait = "0.1"
axum = "0.8"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
ironclaw_host_api = { path = "../ironclaw_host_api", version = "0.1.0" }
ironclaw_network = { path = "../ironclaw_network", version = "0.1.0" }
ironclaw_run_state = { path = "../ironclaw_run_state", version = "0.1.0" }
ironclaw_secrets = { path = "../ironclaw_secrets", version = "0.1.0" }
rand = "0.8"
secrecy = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt", "sync", "time"] }
tracing = "0.1"
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
