[package]
name = "ironclaw_reborn"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
description = "Standalone Reborn composition and adapters for IronClaw"
authors = ["NEAR AI <support@near.ai>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/nearai/ironclaw"
repository = "https://github.com/nearai/ironclaw"
publish = false

[dependencies]
async-trait = "0.1"
ironclaw_llm = { path = "../ironclaw_llm", version = "0.1.0" }
ironclaw_loop_support = { path = "../ironclaw_loop_support", version = "0.1.0" }
ironclaw_turns = { path = "../ironclaw_turns", version = "0.1.0" }

[dev-dependencies]
rust_decimal = "1"
tokio = { version = "1", features = ["macros", "rt"] }
